--- a/.gitignore
+++ b/.gitignore
@@ -1,9 +1,5 @@
 *.rbc
-capybara-*.html
 .rspec
-/db/*.sqlite3
-/db/*.sqlite3-journal
-/db/*.sqlite3-[0-9]*
 /public/system
 /coverage/
 /spec/tmp
@@ -24,9 +20,9 @@ config/master.key
 # Only include if you have production secrets in this file, which is no longer a Rails default
 # config/secrets.yml
 
-# dotenv
-# TODO Comment out this rule if environment variables can be committed
-.env
+# local dotenv
+.env.*.local
+.env.local
 
 ## Environment normalization:
 /.bundle
